Ansible Tower test

--- a/templates/5_startup.sh.j2
+++ b/templates/5_startup.sh.j2
@@ -6,6 +6,7 @@ export PATH=$PATH:$ORACLE_HOME/bin
 sqlplus -s / as sysdba << EOF
 startup pfile='{{ old_init }}'
 alter system switch logfile;
+alter database disable block change tracking;
 shutdown immediate;
 startup mount pfile='{{ old_init }}'
 exit
