--- a/templates/startupDB.sh.j2
+++ b/templates/startupDB.sh.j2
@@ -4,5 +4,5 @@ export ORACLE_HOME={{ tgt_oh }}
 export PATH=$PATH:$ORACLE_HOME/bin
 
 sqlplus -s "/ as sysdba" << EOF
-startup pfile='{{ tgt_init }}'
+startup
 EOF
